应用场景完善，显然前端还没开始做

--- a/FRBMain.tex
+++ b/FRBMain.tex
@@ -265,6 +265,113 @@ Keywords are a set of words or terms selected from the text to reveal the subjec
 \pagenumbering{arabic} %正文页码从1开始，用阿拉伯数字
 \setcounter{page}{1} 
 
+\section{作品概述}
+\setParDis
+\begin{spacing}{1.5}
+\subsection{研究背景与需求分析}
+\subsection{研究现状和替代方案}
+\subsection{本作品概述}
+\subsection{应用前景}
+
+\section{设计与实现}
+\subsection{系统设计}
+\subsection{核心技术}
+零知识证明
+\subsection{预备知识}
+\subsection{预备知识}
+
+\section{作品分析}
+\subsection{成果展示}
+\subsection{安全与性能测试}
+\subsection{创新点说明}
+\end{spacing}
+
+
+
+\section{绪论}
+本章首先介绍基于位置隐私保护的研究背景和研究意义，接着介绍国内外相关领域的研究现状，然后引出本文研究的主要内容，最后给出本文各章节的内容安排。
+
+\subsection{研究背景与意义}
+近年来，移动用户数量迅猛增长，越来越多的用户选择使用移动设备来满足他们的日常活动需求，而不是依靠电脑。
+$^{[czh\_1]}$在此背景下，基于位置的服务（Location Based Services, LBS）成为了一种趋势。
+大多数现代服务系统都会要求用户发送他们的位置信息，以提供更具适应性、符合用户实际需求和偏好的服务，例如关于天气、交通的警报服务或者提供出行的最佳路线。
+$^{[czh\_2]}$。以Google应用市场为例，根据2017年的统计数据，在最受欢迎的2800个移动应用（aplication,简称app）中，4成以上的app要求用户提供访问位置信息的权限，其中包括在后台可以直接访问位置的app。$^{[czh\_3]}$
+\par
+然而遗憾的是，当前大多数服务提供商对位置信息的保护力度远远不够。
+现行的大多数隐私保护方案都基于通信渠道的安全性和授权，在获取位置信息后，服务提供方并没有对这些敏感信息投入应有的重视。
+$^{[czh\_4]}$在这样的环境下，如何保护位置信息的隐私安全成为了一个新的问题。
+\par
+需要注意的是，在保护位置信息隐私安全的同时，我们还应该保证位置信息的真实性以及用户获得的服务质量。
+如果忽略了位置信息的真实性，那么在一些特殊情景下，用户可能会向系统提供错误的位置信息来达成某些目的。
+比如攻击者可以向系统发送虚假的位置信息，以寻求系统的漏洞；或者用户可以在发生交通事故肇事逃逸后伪造错误的位置信息，以逃避追责$^{[czh\_5]}$。
+而保护隐私后的服务质量也同样需要保障。当前保护位置隐私信息的一种重要方式是模糊用户的实际位置，将用户位置信息隐藏在虚假的位置或者一个模糊的范围中。
+这样固然对位置隐私起到一定的保护作用，却可能降低用户获得的服务质量，影响用户的服务体验。
+\par
+而现有的位置信息保护方案在保护用户信息安全或者在满足上述两种需求上都有进一步提高的空间。
+在这样的背景下，如果可以探索出一种新的位置信息隐私保护方案，这将为保护用户位置信息提供极大助力，并进一步促进隐私保护领域相关技术的发展。
+如果将新的方案技术移植应用到其他领域，那将会为各行业的数据信息安全提供可靠保障。
+
+\subsection{痛点分析}
+基于位置的服务（LBS）是指用户通过暴露自己的位置信息，向服务提供商请求基于位置的相应服务。
+用户通常要发送这些信息给服务提供商：用户ID，用户地理位置，具体服务请求。
+其中，用户ID是IP地址之类能够标识用户身份的认证信息；具体服务请求则指用户对服务提供商请求的具体服务，如天气、地图等。
+\par
+这三个信息都可能泄露用户的隐私，其中用户地理位置暴露的隐私信息量最大，也最真实具体。
+多数用户不认为提供单点位置信息会对自身隐私造成威胁，但真正的安全威胁来自于服务提供商不断违规地收集记录用户的地理位置信息，从而通过技术手段分析出更多隐私信息。
+\par
+具体而言，服务提供商缓存用户提供的单点位置信息和上传时间，通过大数据分析手段就可以制作出用户随时间活动轨迹与活动热点图，
+从而进一步分析出用户的行为习惯、和其他人的交集、健康状态、甚至具体身份等敏感隐私。
+服务提供商会利用分析出的用户隐私画像攫取违规利益，甚至对匿名用户进行去匿名化，严重威胁用户隐私安全。
+
+
+\par
+目前该问题正逐步得到重视，但
+当使用涉及地理位置的服务时，留给用户的选择权，就只有应用访问地理位置时的“同意”与“不同意”两个粗糙的选项。
+企业借助使用地理位置提供服务的名义，将用户摆在了无法反制的弱势地位上。
+
+位置隐私分哪两种：单点位置和轨迹位置隐私，轨迹位置可以看作时间上连续的单点位置集合
+大数据，去匿名化（即使下次匿名登录，也能再找出你）
+
+\subsection{研究现状}
+我们的隐私研究重心放在用户移动设备获取到具体位置信息后，和服务提供商进行交互的过程中。
+在此过程中，用户即想接受服务提供商基于位置的服务，又想通过模糊化匿名化自身位置的方式，保护自身隐私。
+
+\subsubsection{位置服务系统架构}
+为保护用户隐私，位置服务系统通常有以下三种架构方式：【基于位置服务的隐私保护研究 李梦涵】
+- 独立结构：用户自身移动设备对位置进行模糊化，但对移动设备计算和存储开销大，不宜单独使用。
+- 中心服务器式结构：引入中间可信第三方计算中心，但是它会成为性能瓶颈和中心化安全威胁。
+- 分布式结构：多个用户设备进行协同，缺点是设计困难，并且难以防范恶意用户。
+
+更多选择独立结构和分布式结构相结合，
+
+【姜、崔】
+\subsubsection{位置隐私保护常用方法}
+- 模糊、虚拟位置：对自身位置进行泛化，给服务提供商一个模糊的范围。
+  - 分布式模糊：和多个邻居设备进行协同，协同共同生成一个模糊范围。
+  - 差分隐私模糊：选取几个随机扰动点，拟定一个模糊范围。但对用户设备算力消耗大。
+  - K-匿名：选取多个邻居设备，生成一个范围，范围内节点皆匿名，服务商无法区分哪个是当前用户。这个方法可以和分布式架构很好结合。但不能提供对服务提供商的权益保护，即不能防止用户造假。
+- 假身份：使用假ID和服务提供商进行通讯，是一种匿名手段，但可能被服务提供商通过行为习惯分析等手段去匿名化，需要经常性更换ID保证隐私效果。
+- 加密方法：同态加密等技术，让服务提供商不知道具体数据的情况下进行服务提供。但同态加密等密码算法开销非常大。
+
+
+K匿名：不能保护服务提供商的权益
+
+
+\subsection{技术优势及创新点}
+我们的技术在K-匿名技术的基础上，还保证了一定服务提供商的权益。
+即位置匿名化和模糊化不是用户单方面行为，要对用户的欺骗行为作出一定限制。
+这可以用在更多场景中：
+比如交友软件，服务商同样需要你不进行位置造假；
+比如伪造地域，访问限制服务。
+
+\subsection{前景扩展}
+兴趣点（Point of Interest）分析：
+社交娱乐：交友软件，同城社交分享
+精确广告服务：
+
+
+
+%********************格式要求********************
 \section{简介}
 \setParDis %设置段间距为 0
 \begin{spacing}{1.5}
@@ -344,7 +451,6 @@ Keywords are a set of words or terms selected from the text to reveal the subjec
 
 标注格式：引用参考文献标注方式应全文统一，标注的格式为[序号]，放在引文或转述观点的最后
 一个句号之前，所引文献序号用小4号Times New Roman体、以上角标形式置于方括号中，如“……成果”$^{[1]}$。
-
 \section{公式模板}
 
 公式示例展示如下：
