--- a/FRBMain.tex
+++ b/FRBMain.tex
@@ -289,62 +289,98 @@ Keywords are a set of words or terms selected from the text to reveal the subjec
 
 
 \section{绪论}
-本章首先介绍基于位置隐私保护的研究背景和研究意义，接着介绍国内外相关领域的研究现状，然后引出本文研究的主要内容，最后给出本文各章节的内容安排。
+本章首先介绍基于位置信息隐私保护的研究背景和研究意义，接着介绍国内外相关领域的研究现状，然后引出本文研究的主要内容，最后给出本文各章节的内容安排。
 
 \subsection{研究背景与意义}
 近年来，移动用户数量迅猛增长，越来越多的用户选择使用移动设备来满足他们的日常活动需求，而不是依靠电脑。
-$^{[czh\_1]}$在此背景下，基于位置的服务（Location Based Services, LBS）成为了一种趋势。
-大多数现代服务系统都会要求用户发送他们的位置信息，以提供更具适应性、符合用户实际需求和偏好的服务，例如关于天气、交通的警报服务或者提供出行的最佳路线。
-$^{[czh\_2]}$。以Google应用市场为例，根据2017年的统计数据，在最受欢迎的2800个移动应用（aplication,简称app）中，4成以上的app要求用户提供访问位置信息的权限，其中包括在后台可以直接访问位置的app。$^{[czh\_3]}$
+$^{[czh\_1]}$在此背景下，基于位置的服务（Location Based Services, LBS）成为了一种趋势。基于位置的服务是指服务提供商根据用户提交的位置信息，返还给用户对应的基于位置信息的相应服务。
+比如大多数现代服务系统都会要求用户发送他们的位置信息，以提供更具适应性、符合用户实际需求和偏好的服务，例如关于天气、交通的警报服务或者提供出行的最佳路线。$^{[czh\_2]}$
 \par
+在用户提交的位置信息中，最常用、便于服务提供商进行处理的位置信息是用户直接的地理位置信息，这也和用户个人隐私安全有着密切关系。但是，当移动应用频繁询问用户所在位置信息时，用户的位置信息面临着暴露的风险，甚至用户的其他隐私也不再安全。比如不可信的服务提供商可以利用用户的位置信息和上传时间，结合大数据分析手段绘制出用户的时间活动轨迹和活动热点图，进一步分析出用户的行为习惯、具体身份、社交信息等敏感隐私。在更极端的情况下，服务提供商还可以分析出用户的隐私画像，对匿名用户进行去匿名化，严重威胁用户隐私安全。
+\par
+但是事实上相当多的移动应用都会询问用户的位置信息，这也带来了泄露位置信息、侵犯隐私的隐患。
+以Google应用市场为例，根据2017年的统计数据，在最受欢迎的2800个移动应用（aplication,简称app）中，4成以上的app要求用户提供访问位置信息的权限，其中包括在后台可以直接访问位置的app，$^{[czh\_3]}$这在当时引起了用户群体一定的抗议。
 然而遗憾的是，当前大多数服务提供商对位置信息的保护力度远远不够。
 现行的大多数隐私保护方案都基于通信渠道的安全性和授权，在获取位置信息后，服务提供方并没有对这些敏感信息投入应有的重视。
 $^{[czh\_4]}$在这样的环境下，如何保护位置信息的隐私安全成为了一个新的问题。
 \par
 需要注意的是，在保护位置信息隐私安全的同时，我们还应该保证位置信息的真实性以及用户获得的服务质量。
 如果忽略了位置信息的真实性，那么在一些特殊情景下，用户可能会向系统提供错误的位置信息来达成某些目的。
-比如攻击者可以向系统发送虚假的位置信息，以寻求系统的漏洞；或者用户可以在发生交通事故肇事逃逸后伪造错误的位置信息，以逃避追责$^{[czh\_5]}$。
+比如攻击者可以向系统发送虚假的位置信息，以寻求系统的漏洞；或者用户可以在发生交通事故肇事逃逸后提交错误的位置信息，以逃避追责$^{[czh\_5]}$。
 而保护隐私后的服务质量也同样需要保障。当前保护位置隐私信息的一种重要方式是模糊用户的实际位置，将用户位置信息隐藏在虚假的位置或者一个模糊的范围中。
 这样固然对位置隐私起到一定的保护作用，却可能降低用户获得的服务质量，影响用户的服务体验。
+这两个需求也对现有位置隐私保护方案提出了更高的要求。
 \par
-而现有的位置信息保护方案在保护用户信息安全或者在满足上述两种需求上都有进一步提高的空间。
-在这样的背景下，如果可以探索出一种新的位置信息隐私保护方案，这将为保护用户位置信息提供极大助力，并进一步促进隐私保护领域相关技术的发展。
-如果将新的方案技术移植应用到其他领域，那将会为各行业的数据信息安全提供可靠保障。
+而现有的大多数位置隐私保护方案要么在在保护用户位置信息安全上存在漏洞，要么在满足上述两种需求上存在进一步提高的空间。并且用户基本只能选择同意授权获取位置权限或者拒绝，而难以在授权的同时控制暴露的位置信息的精度。因而服务提供商可以借提供服务的名义收集用户位置信息，这也使得用户处在一个难以保护自己隐私的弱势地位上。
+在这样的背景下，如果可以探索出一种新的位置隐私保护方案，这将为保护用户位置信息安全提供极大助力，并进一步促进隐私保护领域相关技术的发展。
+同时，如果将新的方案技术移植应用到其他领域，那将会为各行业的数据信息安全提供更可靠的保障。
 
-\subsection{痛点分析}
-基于位置的服务（LBS）是指用户通过暴露自己的位置信息，向服务提供商请求基于位置的相应服务。
-用户通常要发送这些信息给服务提供商：用户ID，用户地理位置，具体服务请求。
-其中，用户ID是IP地址之类能够标识用户身份的认证信息；具体服务请求则指用户对服务提供商请求的具体服务，如天气、地图等。
-\par
-这三个信息都可能泄露用户的隐私，其中用户地理位置暴露的隐私信息量最大，也最真实具体。
-多数用户不认为提供单点位置信息会对自身隐私造成威胁，但真正的安全威胁来自于服务提供商不断违规地收集记录用户的地理位置信息，从而通过技术手段分析出更多隐私信息。
-\par
-具体而言，服务提供商缓存用户提供的单点位置信息和上传时间，通过大数据分析手段就可以制作出用户随时间活动轨迹与活动热点图，
-从而进一步分析出用户的行为习惯、和其他人的交集、健康状态、甚至具体身份等敏感隐私。
-服务提供商会利用分析出的用户隐私画像攫取违规利益，甚至对匿名用户进行去匿名化，严重威胁用户隐私安全。
-
-
-\par
-目前该问题正逐步得到重视，但
-当使用涉及地理位置的服务时，留给用户的选择权，就只有应用访问地理位置时的“同意”与“不同意”两个粗糙的选项。
-企业借助使用地理位置提供服务的名义，将用户摆在了无法反制的弱势地位上。
-
-位置隐私分哪两种：单点位置和轨迹位置隐私，轨迹位置可以看作时间上连续的单点位置集合
-大数据，去匿名化（即使下次匿名登录，也能再找出你）
 
 \subsection{研究现状}
-我们的隐私研究重心放在用户移动设备获取到具体位置信息后，和服务提供商进行交互的过程中。
-在此过程中，用户即想接受服务提供商基于位置的服务，又想通过模糊化匿名化自身位置的方式，保护自身隐私。
 
-\subsubsection{位置服务系统架构}
-为保护用户隐私，位置服务系统通常有以下三种架构方式：【基于位置服务的隐私保护研究 李梦涵】
-- 独立结构：用户自身移动设备对位置进行模糊化，但对移动设备计算和存储开销大，不宜单独使用。
-- 中心服务器式结构：引入中间可信第三方计算中心，但是它会成为性能瓶颈和中心化安全威胁。
-- 分布式结构：多个用户设备进行协同，缺点是设计困难，并且难以防范恶意用户。
+现行的基于位置的隐私保护系统主要有3种结构：集中式结构、分布式结构以及混合式结构。国内外研究人员在这3种结构的基础上迭代出了很多高效、具有广泛适用性的位置信息隐私保护算法。本节将简要介绍这3种系统结构，并概括出各种结构的优缺点。
 
-更多选择独立结构和分布式结构相结合，
+\subsubsection{集中式结构}
+集中式结构在基本已被淘汰的独立结构（仅由用户和服务提供方组成客户端/服务器结构$^{[czh_6]}$）的基础上进行改进，在客户端和服务器之间加入位置匿名服务器，以分担客户端的计算、存储开销。集中式结构的示意图见图\ref{集中式结构}。
 
-【姜、崔】
+\begin{figure}[H] %H为当前位置，!htb为忽略美学标准，htbp为浮动图形
+	\centering %图片居中
+	\includegraphics[width=0.8\textwidth]{./include_picture/集中式结构（绪论-研究现状）} %插入图片，[]中设置图片大小，{}中是图片文件名
+	\caption{集中式结构系统示意图} %最终文档中希望显示的图片标题
+	\label{集中式结构} %用于文内引用的标签
+\end{figure}
+
+在集中式结构的位置隐私保护系统中，用户发起查询请求后，由位置匿名服务器对用户的精确位置进行匿名处理。服务提供商受到位置匿名服务器提交的查询请求后，根据接受到的位置返回用户可能需要的答案集合，称为候选答案集合。位置匿名服务器接收到答案集合后，根据用户的精确位置进行筛选求精操作，最终把精确答案返还给用户。$^{[czh\_7]}$
+\par
+引入位置匿名服务器为系统性能带来了显著的提高。一方面，位置匿名服务器承担了位置匿名处理、候选答案求精的任务，从而减轻了用户端的负担，使得用户端的设计可以更为轻量。另一方面，引入位置匿名服务器后，原本一些在移动客户端上难以实现的复杂算法、功能也有了实现的可能，系统功能更加强大。
+\par
+当然，位置匿名服务器本身也有一些缺点。随着系统的使用，服务器中存储的用户位置数据会逐渐积累。如果没有对服务器存储的数据进行处理，一旦服务器被攻击、或者服务器不再可信，这将会严重损害用户的位置信息隐私安全。此外，当系统用户频繁请求服务时，服务器自身的性能也可能成为限制系统性能的瓶颈。$^{[czh\_6]}$
+
+
+\subsubsection{分布式结构}
+鉴于集中结构位置匿名服务器带来的安全问题和性能瓶颈问题，分布式结构去除了位置匿名服务器的存在，而是通过多台移动设备之间的协作来实现位置匿名效果。分布式系统结构示意图见图\ref{分布式结构}。
+\begin{figure}[H] %H为当前位置，!htb为忽略美学标准，htbp为浮动图形
+	\centering %图片居中
+	\includegraphics[width=0.8\textwidth]{./include_picture/分布式点对点结构（绪论-研究现状）} %插入图片，[]中设置图片大小，{}中是图片文件名
+	\caption{分布式结构系统示意图} %最终文档中希望显示的图片标题
+	\label{分布式结构} %用于文内引用的标签
+\end{figure}
+
+在分布式结构系统中，用户发起查询请求后，一定区域内的多台移动设备相互协作并进行一定的通信，形成一个匿名区域。服务提供商根据接收到的区域返回相应的候选答案集合，用户接受到答案集合后进行筛选和求取精确答案的操作。
+\par
+和集中式结构相比，分布式结构的系统进一步降低了用户位置信息泄露的隐患。但分布式结构也对用户移动设备的计算能力提出了一定的要求，以便进行协作匿名。这也限制了分布式结构系统的发展。$^{[czh\_6]}$
+
+\subsubsection{混合结构}
+考虑到集中式结构系统的计算能力以及分布式结构系统的信息保密性，部分系统融合了上述两种结构，形成了兼具上述优点的新的系统结构——混合结构。混合结构的系统示意图见图\ref{混合结构}。
+\begin{figure}[H] %H为当前位置，!htb为忽略美学标准，htbp为浮动图形
+	\centering %图片居中
+	\includegraphics[width=0.8\textwidth]{./include_picture/混合结构（绪论-研究现状）} %插入图片，[]中设置图片大小，{}中是图片文件名
+	\caption{混合结构系统示意图} %最终文档中希望显示的图片标题
+	\label{混合结构} %用于文内引用的标签
+\end{figure}
+
+在混合结构系统中，用户发起查询请求后，系统可以选择让用户通过位置匿名服务器进行匿名查询，也可以联合多台移动设备，通过分布式的方式直接和LBS服务器取得联系，这将取决与系统中发起查询请求的用户数量。
+\par
+值得一提的是，虽然混合结构吸收了先前两种结构的优点，使它看上去更为灵活。但实际上，在构建和维持混合结构时需要不断设置、调整系统参数，以决定系统什么时候通过哪种方式和LBS服务器建立联系。这也束缚了混合结构的进一步发展$^{[czh\_8]}$。
+\par \par 
+在上面的3个小节中，我们介绍了现行基于位置隐私保护系统的3种主要结构，它们各自的优缺点可以概括为表\ref{3种结构对比}。
+
+
+\begin{table}[H]
+	\caption{位置隐私保护系统3种结构对比}
+	\centering
+	\label{3种结构对比}
+	\begin{tabular}{ccc}
+		\hline  
+		\makebox[0.1\textwidth][c]{结构名称} & \makebox[0.4\textwidth][c]{优点} & \makebox[0.4\textwidth][c]{缺点}  \\ 
+		\hline  
+		集中式结构	&	计算、存储性能提高	&	有泄露隐私的风险\\
+		分布式结构	&	提高安全性		   &	对移动设备性能要求较高\\
+		混合结构	 &	兼具安全性和性能	 & 		系统参数限制了应用\\
+		\hline
+	\end{tabular} 
+\end{table} 
+
 \subsubsection{位置隐私保护常用策略}
 2.1 虚拟位置策略: \par
 通过对用户的精确位置进行泛化处理，向服务提供商提供一个不精确的位置范围，从而保护用户的位置隐私。
