--- a/references.bib
+++ b/references.bib
@@ -96,3 +96,73 @@
   year={2017},
   organization={IEEE}
 }
+
+@article{Merkle,
+  title={A certified digital signature},
+  author={Merkle and R.C.},
+  booktitle={CRYPTO 1989},
+  pages={218–-238},
+  year={1989},
+  organization={Springer},
+}
+
+@article{Fourty-two,
+  title={Transparent polynomial delegation and its applications to zero knowledge proof},
+  author={Zhang, J., Xie, T., Zhang, Y., Song, D.},
+  booktitle={SP 2020},
+  pages={859–-876},
+  year={2020},
+  organization={IEEE},
+}
+
+@article{Eight,
+  title={Ligero++: A new optimized sublinear IOP},
+  author={Bhadauria, R., Fang, Z., Hazay, C., Venkitasubramaniam, M., Xie, T., Zhang, Y.},
+  booktitle={CCS 2020},
+  pages={2025–-2038},
+  year={2020},
+  organization={ACM},
+}
+
+@article{seven,
+  title={Interactive oracle proofs},
+  author={Ben-Sasson, E., Chiesa, A., Spooner, N.},
+  booktitle={TCC 2016-B},
+  pages={31–-60},
+  year={2016},
+}
+
+@article{Thirty-nine,
+  title={Constant-round interactive proofs for delegating computation},
+  author={Reingold, O., Rothblum, G.N., Rothblum, R.D.},
+  booktitle={STOC 2016},
+  pages={49-–62},
+  year={2016},
+  organization={ACM},
+}
+
+@article{six,
+  title={Aurora: Transparent succinct arguments for R1CS},
+  author={Ben-Sasson, E., Chiesa, A., Riabzev, M., Spooner, N., Virza, M., Ward, N.P.},
+  booktitle={EUROCRYPT 2019},
+  pages={103–-128},
+  year={2019},
+  organization={Springer},
+}
+
+@article{three,
+  title={Fast reed-solomon interactive oracle proofs of proximity},
+  author={Ben-Sasson, E., Bentov, I., Horesh, Y., Riabzev, M.},
+  booktitle={ICALP 2018},
+  pages={14:1–-14:17},
+  year={2018},
+}
+
+@article{twelve,
+  title={Efficient protocols for set membership and range proofs},
+  author={Camenisch, J., Chaabouni, R., Shelat, A.},
+  booktitle={ASIACRYPT 2008},
+  pages={234–-252},
+  year={2008},
+  organization={Springer}
+}
