--- a/FRBMain.tex
+++ b/FRBMain.tex
@@ -273,7 +273,7 @@ Keywords are a set of words or terms selected from the text to reveal the subjec
 \section{作品概述}
 本章首先介绍基于位置信息隐私保护的研究背景和研究意义，接着介绍国内外相关领域的研究现状，然后引出本文研究的主要内容，最后给出本文各章节的内容安排。
 
-\subsection{研究背景与意义}
+\subsection{研究背景与研究意义}
 近年来，移动用户数量迅猛增长，越来越多的用户选择使用移动设备来满足他们的日常活动需求，而不是依靠电脑。
 \cite{czh_1.1}在此背景下，基于位置的服务（Location Based Services, LBS）成为了一种趋势。基于位置的服务是指服务提供商根据用户提交的位置信息，返还给用户对应的基于位置信息的相应服务。
 比如大多数现代服务系统都会要求用户发送他们的位置信息，以提供更具适应性、符合用户实际需求和偏好的服务，例如关于天气、交通的警报服务或者提供出行的最佳路线。\cite{czh_1.2}
@@ -464,7 +464,29 @@ Keywords are a set of words or terms selected from the text to reveal the subjec
 引入零知识范围证明技术后，保护用户位置隐私不再需要第三方位置匿名服务器的参与，也不需要在多个用户端之间进行协作通信以达到匿名效果。同时，查询、提供服务与保护用户位置信息可以仅在移动用户端和服务提供商两方之间完成。所以本文在应用零知识范围证明技术的基础上，对现有位置隐私保护方案进行优化，改进了现有位置隐私保护系统的结构。
 
 
-\subsection{内容结构安排(to be continued)}
+\subsection{论文组织结构}
+本文共有七章，其中最后一章是本文引用的参考文献具体结构见下图。
+\par 
+第一章是作品概述，主要从本文的研究背景与意义、研究现状和作品概述与创新点说明三部分构成。
+\par 
+第二章是本文需要使用到的定理、算法的一些预备知识，包括安全的随机数生成和零知识范围证明的理论基础内容，后者包括默克尔树、里得·所罗门编码、向量内积论证等7个预备知识。
+\par 
+第三章是本文作品设计与实现的过程，包括需求分析、作品系统概述、问题转化和关键技术4部分。在分析隐私保护行业需求的基础上，我们设计出具有广阔应用前景的位置隐私保护系统，并呈现出在实际解决问题时我们如何将应用问题转化为原理性问题，并罗列出在解决问题过程中我们使用的一些关键技术。
+\par 
+第四章是作品成果展示与分析。在理论上将问题解决后，我们设计出了具有前端对接能力的作品，并展示它的具体功能。在这之后，我们从性能和安全性两方面对我们的作品进行分析、评估。
+\par 
+第五章是前景展望。在完成作品初步设计以后，我们对作品的应用前景进行初步分析，判断出作品具有较大潜力，在应用市场上有较大的实现可能。
+\par 
+第六章是结论。基于本文工作，我们得出结论，论证了作品的可行性。
+\par 
+第七章是参考文献，罗列了本文所引用的参考文献。
+
+\begin{figure}[H] %H为当前位置，!htb为忽略美学标准，htbp为浮动图形
+	\centering %图片居中
+	\includegraphics[width=0.9\textwidth]{./include_picture/2023冯如杯-论文组织结构} %插入图片，[]中设置图片大小，{}中是图片文件名
+	\caption{论文组织结构} %最终文档中希望显示的图片标题
+	\label{论文组织结构} %用于文内引用的标签
+\end{figure}
 
 \iffalse
 \subsection{前景扩展(to be merged)}
@@ -620,7 +642,6 @@ $\hat{f}=f_0+f_1x+\cdots+f_nx^n$表示为向量$\vec{f}=(f_0,f_1,\cdots,f_n)$
 
 %********************作品设计与实现********************
 \section{作品设计与实现}
-\subsection{系统概述}
 
 \subsection{需求分析}
 为了使改进后的位置隐私保护系统更符合当前应用市场的需要，本文设计出的作品应满足一定的功能和性能的需求。本节将对位置隐私保护系统在功能上、性能上的需求进行分析，从而为本文作品指引改进方向。
@@ -656,7 +677,7 @@ $\hat{f}=f_0+f_1x+\cdots+f_nx^n$表示为向量$\vec{f}=(f_0,f_1,\cdots,f_n)$
 位置信息涉及用户隐私，应该防止泄露的可能。所以系统应该具有一定的防卫或者恢复能力，在受到攻击或者发生错误时能采取措施减少损失。具体而言，当局部系统出错或受到攻击时，这部分系统应该能在较短时间内恢复并继续运行，而不会造成大范围影响，从而在最大程度上减少系统运行的风险。这也是应用场景对位置隐私保护系统在健壮性上的要求。
 
 
-\subsection{系统说明}
+\subsection{系统概述}
 本作品系统主要涉及两个主体：服务请求方和服务提供商。
 服务请求方一端由\textbf{手机网页端交互界面、定位与生成零知识范围证明系统}构成，具体技术涉及 Vue.js 、C++ 和 Python。
 服务提供商一端由\textbf{数据库、（零知识范围证明）验证系统}构成，开发技术使用 Shell 和 MySQL 。
